<resources>
    <string name="app_name">CalculIMC</string>
    <string name="accueil_taille">Taille (cm)</string>
    <string name="accueil_taille_hint">Veuillez saisir votre taille en cm</string>
    <string name="accueil_poids">Poids (Kg)</string>
    <string name="accueil_poids_hint">Veuillez saisir votre poids en kg</string>
    <string name="accueil_calculer">Calculer</string>
    <string name="accueil_calculer_result_line1">Votre IMC est %s</string>
    <string name="accueil_calculer_result_line2">Votre êtes en état de %s</string>
    <string name="accueil_calculer_result_line3">Votre poids idéal doit se situer entre %s et %s Kg</string>
    <string name="accueil_calculer_result_maigre">Insuffisance pondérale (maigreur)</string>
    <string name="accueil_calculer_result_normal">Corpulence normale</string>
    <string name="accueil_calculer_result_surpoids">Surpoids</string>
    <string name="accueil_calculer_result_obesite_1">Obésité modérée</string>
    <string name="accueil_calculer_result_obesite_2">Obésité sévère</string>
    <string name="accueil_calculer_result_obesite_3">Obésité morbide ou massive</string>
</resources>