<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_taille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accueil_taille"
            android:labelFor="@id/input_taille"/>

        <EditText
            android:id="@+id/input_taille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/accueil_taille_hint" />

        <TextView
            android:id="@+id/label_poids"
            android:labelFor="@id/input_poids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accueil_poids" />

        <EditText
            android:id="@+id/input_poids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/accueil_poids_hint" />

        <Button
            android:id="@+id/btn_calculer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accueil_calculer" />

        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/lbl_calculIMC_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="8pt"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>